--- a/style.css
+++ b/style.css
@@ -11,25 +11,26 @@
 * {
     margin: 0;
     padding: 0;
-    font-size: .90rem;
     box-sizing: border-box;
+    font-size: 1rem;
 }
 
 body {
-    width: 100vw;
+    width: 120vw;
     height: 100vh;
     background-color: var(--bgColor);
+    font-size: 0.8rem;
 }
 
 body header {
-    width: 100vw;
+    width: 120vw;
     height: calc(100vh/6);
 }
 
 body header,
 body header div.head,
 body header div.head div.headFirstChild {
-    width: 100vw;
+    width: 120vw;
     background-color: var(--bgHeader);
     display: flex;
     justify-content: center;
@@ -43,8 +44,8 @@ body header div.head div.headFirstChild {
 
 body header div.head div.headFirstChild div.nav {
     background-color: var(--bgColor);
-    padding: 1vh 1.8vw 1vh;
-    margin: 0 calc(100vw/25);
+    padding: 1vh 0.8vw 1vh;
+    margin: 0 calc(100vw / 20);
     border-radius: 1.5vh 1.5vw;
 }
 
@@ -67,6 +68,7 @@ body main div.main div.mfc_5 {
 }
 
 body main div.main div.mfc_1 span.mfc {
+    font-size: 1.2em;
     font-weight: bolder;
 }
 
