packed main in grids

--- a/style.css
+++ b/style.css
@@ -12,32 +12,41 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 1rem;
 }
 
 body {
-    width: 120vw;
-    height: 100vh;
     background-color: var(--bgColor);
     font-size: 0.8rem;
 }
 
-body header {
-    width: 120vw;
-    height: calc(100vh/6);
+body main div.main {
+    display: grid;
+    grid-template-areas: "programming side"
+        "development side"
+        "interface-less side"
+        "dataScience side"
+        "academics academics"
+    ;
+}
+body header div.head{
+    display: flex;
+    justify-content: center;
 }
 
 body header,
 body header div.head,
 body header div.head div.headFirstChild {
-    width: 120vw;
     background-color: var(--bgHeader);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
 }
 
 body header div.head div.headFirstChild {
+    display: grid;
+    grid-template-areas: "Programming Development Interface-less DataScience Academics";
+    column-gap: calc(10vw/5);
+    width: 60vw;
+    justify-content: center;
+    align-items: center;
     color: var(--bashPurple);
     grid-template-columns: repeat(5, 1fr);
 }
@@ -45,26 +54,58 @@ body header div.head div.headFirstChild {
 body header div.head div.headFirstChild div.nav {
     background-color: var(--bgColor);
     padding: 1vh 0.8vw 1vh;
-    margin: 0 calc(100vw / 20);
+    /* margin: 0 calc(100vw / 20); */
     border-radius: 1.5vh 1.5vw;
+}
+body header div.head div.headFirstChild div#firsNav{
+    grid-area: Programming;
+}
+body header div.head div.headFirstChild div#secondNav{
+    grid-area: Development;
+}
+body header div.head div.headFirstChild div#thirdNav{
+    grid-area: Interface-less;
+}
+body header div.head div.headFirstChild div#fourthNav{
+    grid-area: DataScience;
+}
+body header div.head div.headFirstChild div#fifthNav{
+    grid-area: Academics;
+}
+body main div.main div.mfc_1 {
+    grid-area: programming;
+}
+
+body main div.main div.mfc_2 {
+    grid-area: development;
+}
+
+body main div.main div.mfc_3 {
+    grid-area: interface-less;
+}
+
+body main div.main div.mfc_4 {
+    grid-area: dataScience;
 }
 
 body main div.main div.mfc_1,
 body main div.main div.mfc_2,
 body main div.main div.mfc_3,
 body main div.main div.mfc_4 {
-    height: calc(70vh/4);
     padding: calc(5vh/4) calc(5vh/4);
     font-weight: bolder;
-    width: 60vw;
     color: var(--bashGreen);
 }
 
 body main div.main div.mfc_5 {
+    grid-area: academics;
     padding: calc(5vh/4) calc(5vh/4);
-    width: 100vw;
     color: var(--bashGreen);
     font-weight: bolder;
+}
+
+body main div.main div.mainSecondChild {
+    grid-area: side;
 }
 
 body main div.main div.mfc_1 span.mfc {
